# Space_Battle_Arcade

./: .gitignore  README.md
Space_Battle_Arcade/: CMakeLists.txt  Space_Battle_Arcade.sln  packaging_for_release_instructions.txt
Space_Battle_Arcade/CMake/: LinkAssimp.cmake  LinkGLAD.cmake  LinkGLFW.cmake  LinkGLM.cmake  LinkKLEIN.cmake  LinkOpenAL.cmake  LinkSTB.cmake  WarningsAsErrors.cmake
Space_Battle_Arcade/OPEN_AL_REQUIREMENTS/lib/OpenAL/: OpenAL32.exp  OpenAL32.lib  common.lib  ex-common.lib
Space_Battle_Arcade/OPEN_AL_REQUIREMENTS/new/: files rebuilt 2 years after release.txt
Space_Battle_Arcade/OPEN_AL_REQUIREMENTS/new/Debug/: OpenAL32.exp  alrecord.ilk  altonegen.ilk  common.lib  ex-common.lib  openal-info.ilk
Space_Battle_Arcade/OPEN_AL_REQUIREMENTS/old/OpenAL/: OpenAL32.lib  ex-common.lib
Space_Battle_Arcade/OPEN_GL_REQUIREMENTS/include/glad/: glad.h
Space_Battle_Arcade/OPEN_GL_REQUIREMENTS/lib/: assimp-vc140-mt.lib  glfw3.lib
Space_Battle_Arcade/Scripts/: prepare_release.py
Space_Battle_Arcade/Space_Battle_Arcade/: 2.HelloTriangleChallenge3.cpp  6.CoordinateSystems.cpp  6.CoordinateSystemsChallenge2.cpp  6.VertShader.glsl  8.ColorTutFragShader1.glsl  FrameBufferFrag.glsl  Shader.cpp  Space_Battle_Arcade.vcxproj  Space_Battle_Arcade.vcxproj.filters  StencilTesting.cpp  imgui.ini
Space_Battle_Arcade/Space_Battle_Arcade/ArtSourceFiles/collision_models/: polygon_capsule.blend
Space_Battle_Arcade/Space_Battle_Arcade/GameData/custom_collision_shapes/: cockpitshape.mtl
Space_Battle_Arcade/Space_Battle_Arcade/GameData/mods/: config.json
Space_Battle_Arcade/Space_Battle_Arcade/GameData/mods/SpaceArcade/: SpaceArcade.json
Space_Battle_Arcade/Space_Battle_Arcade/Models/: DESCLAIMER - I do not own these models - sources of models.txt  DESCLAIMER MODEL SOURCES
Space_Battle_Arcade/Space_Battle_Arcade/Models/3dboxman/: 3dBoxMan.blend  3dBoxMan.dae  3dBoxMan.fbx  3dBoxMan_FullWeights.blend  3dBoxMan_FullWeights.dae  3dBoxMan_FullWeights.fbx  3dBoxMan_old.dae
Space_Battle_Arcade/Space_Battle_Arcade/Models/collision/: uvsphere.mtl
Space_Battle_Arcade/Space_Battle_Arcade/Models/plane/: planev1.mtl
Space_Battle_Arcade/Space_Battle_Arcade/SelfTests/: AdvOpengl10_Instancing.json  AdvOpengl11_AntiAliasing.json  AdvOpengl1_DepthTesting.json  AdvOpengl2_StencilTesting.json  AdvOpengl3_Blending.json  AdvOpengl4_FaceCulling.json  AdvOpengl5_FrameBuffers.json  AdvOpengl6_CubeMaps.json  AdvOpengl7_AdvancedData.json  AdvOpengl8_AdvancedGLSL.json  AdvOpengl9_GeometryShader.json  ShadowsPointLightNotes.txt  example_quiz2.json
Space_Battle_Arcade/Space_Battle_Arcade/Source/EngineTests/: DelegateTests.cpp  EngineTestSuite.h
Space_Battle_Arcade/Space_Battle_Arcade/Source/Game/: OptionalCompilationMacros.h  SACollisionDebugRenderer.cpp  SACollisionDebugRenderer.h  SAPlayer.cpp  SAPlayer.h  SAPrimitiveShapeRenderer.cpp  SAPrimitiveShapeRenderer.h  SAShip.cpp  SAShip.h  SAShipPlacements.cpp  SAShipPlacements.h  SpaceArcade.cpp  SpaceArcade.h
Space_Battle_Arcade/Space_Battle_Arcade/Source/Game/0.TestFiles/: MemoryLeakTest.cpp
Space_Battle_Arcade/Space_Battle_Arcade/Source/Game/AI/: GlobalSpaceArcadeBehaviorTreeKeys.h  SADogfightNodes_LargeTree.cpp  SADogfightNodes_LargeTree.h  SAShipAIBrain.cpp  SAShipAIBrain.h  SAShipBehaviorTreeNodes.cpp  SAShipBehaviorTreeNodes.h
Space_Battle_Arcade/Space_Battle_Arcade/Source/Game/AssetConfigs/: CampaignConfig.cpp  CampaignConfig.h  DifficultyConfig.h  JsonUtils.h  SAConfigBase.cpp  SAConfigBase.h  SAProjectileConfig.cpp  SAProjectileConfig.h  SASettingsProfileConfig.cpp  SASettingsProfileConfig.h  SASpawnConfig.cpp  SASpawnConfig.h  SaveGameConfig.cpp  SaveGameConfig.h  SoundEffectSubConfig.cpp  SoundEffectSubConfig.h
Space_Battle_Arcade/Space_Battle_Arcade/Source/Game/Cameras/: SAShipCamera.cpp  SAShipCamera.h
Space_Battle_Arcade/Space_Battle_Arcade/Source/Game/Environment/: Star.h  (+8 more)
Space_Battle_Arcade/Space_Battle_Arcade/Source/GameFramework/: BehaviorTree_ProvidedNodes.cpp  BehaviorTree_ProvidedNodes.h  CheatSystemBase.cpp  CheatSystemBase.h  CurveSystem.cpp  CurveSystem.h  RenderModelEntity.cpp  RenderModelEntity.h  SAAIBrainBase.cpp  SAAIBrainBase.h  SAAssetSystem.cpp  SAAssetSystem.h  SAAudioSystem.cpp  SAAudioSystem.h  SAAutomatedTestSystem.cpp  SAAutomatedTestSystem.h  SABehaviorTree.cpp  SABehaviorTree.h  SABehaviorTreeHelpers.cpp  SABehaviorTreeHelpers.h  SACollisionUtils.cpp  SACollisionUtils.h  SACrossPlatformUtils.cpp  SACrossPlatformUtils.h  SADebugRenderSystem.cpp  SADebugRenderSystem.h  SAGameBase.cpp  SAGameBase.h  SAGameEntity.cpp  SAGameEntity.h  SALevel.cpp  SALevel.h  SALevelSystem.cpp  SALevelSystem.h  SALog.cpp  SALog.h  SAParticleSystem.cpp  SAParticleSystem.h  SAPlayerBase.cpp  SAPlayerBase.h  (+13 more)
Space_Battle_Arcade/Space_Battle_Arcade/Source/Rendering/: NdcQuad.cpp  NdcQuad.h  OpenGLHelpers.cpp  OpenGLHelpers.h  RenderData.cpp  RenderData.h  SAGPUResource.cpp  SAGPUResource.h  SAShader.cpp  SAShader.h  SAWindow.cpp  SAWindow.h
Space_Battle_Arcade/Space_Battle_Arcade/Source/SpaceArcadeModels/: test_spacearcade_models.cpp
Space_Battle_Arcade/Space_Battle_Arcade/Source/Tools/: PlatformUtils.h  SACollisionHelpers.cpp  SACollisionHelpers.h  SADemoInterface.h  SAUtilities.cpp  SAUtilities.h  color_utils.h
Space_Battle_Arcade/Space_Battle_Arcade/SourceExternal/Libraries/: glad.c
Space_Battle_Arcade/Space_Battle_Arcade/new_src/: nu_utils.h
Space_Battle_Arcade/Space_Battle_Arcade/new_src/OpenGLAdvancedTopics/: DepthBufferTesting.cpp
Space_Battle_Arcade/Space_Battle_Arcade/new_src/PBR/: pbr_starterfile_pointlights_multispheres.cpp  pbr_starterfile_pointlights_singlesphere.cpp
Space_Battle_Arcade/Space_Battle_Arcade/new_src/Tests/: ColorsAutoClamped.cpp  collada_import_assimp_test.cpp  glm_matrix_data_row_vs_column.cpp  how_stbi_loads_colors.cpp
Space_Battle_Arcade/Space_Battle_Arcade/new_src/Utilities/: CubeTexturedMesh.cpp  CubeTexturedMesh.h  Mesh.h  SimpleCubeMesh.h  SphereMesh.cpp  Transformable.cpp
Space_Battle_Arcade/WINDOWS_SYSTEM_REQUIREMENTS/: DLL_NOTES__README_IF_THINGS_BREAK.txt
(+1300 files in other folders)
